k8s services and storage notes

--- a/3.k8s_services.md
+++ b/3.k8s_services.md
@@ -100,3 +100,86 @@ spec:
     - It supports many other load balancing technologies like least connection, source hashing, shortest expected delay though
       round-robin is the default.
 
+## Demo
+
+- The yaml configuration file for sample-web.yaml.
+
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: hello-svc
+  labels:
+    app: hello-world
+spec:
+  type: NodePort
+  ports:
+  - port: 8080
+    nodePort: 30001
+    protocol: TCP
+  selector:
+    app: hello-world
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: hello-deploy
+spec:
+  replicas: 10
+  selector:
+    matchLabels:
+      app: hello-world
+  minReadySeconds: 10
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
+  template:
+    metadata:
+      labels:
+        app: hello-world
+    spec:
+      containers:
+      - name: hello-pod
+        image: nigelpoulton/acg-web:0.1
+        ports:
+        - containerPort: 8080
+```
+- The above configuration is for a simple web server which got a service `hello-svc` assigned to it.
+- As we know services get reliable ipaddresses and ports, this `hello-svc` gets assigned a random clusterIp.
+- This ip is registered with DNS. This is a `NodePort` service with port `30001`.
+- All requests that are forwarded to nodeport service at 30001 are forwarded to pods at `8080`.
+- To deploy the app `kubectl apply -f sample-web.yaml`.
+- To view the service `kubectl get svc hello-svc`.
+- NodePort services also get ClusterIP assigned to it.
+- The web services can be accessed by either `${clusterIP}:${containerPort}` or `${anyNodeIP}:{NodePort}`.
+  Ex: `10.15.244.182:8080` or `<node-ip>:30001`
+- To access the application from any pod within the cluster `curl hello-svc:8080`  
+- To access with nodeip address `curl 10.166.0.2:30001`.
+- It is very common to access the pod(or app) using service name and containerPort.
+
+## Demo LoadBalancer Service
+
+- The above NodePort service is accessible within the cluster.
+- If we are using managed cloud service like GKE, we can use LoadBalancer service to access the app from external network.
+
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: lb-svc
+  labels:
+    app: hello-world
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 8080
+  selector:
+    app: hello-world
+```
+
+- The above configuration creates a LoadBalancer Service and assigned it to the pods running with the label `hello-world` at port `8080`
+- As we know the pods already exists, but still it creates a new service before them.
+- Lets name the yaml `lb.yaml' and run the command `kubetcl apply -f .\lb.yaml`.
+- This takes some time to get assign a load balancer. To watch this `kubectl get svc --watch`.
