--- a/7.scaling.md
+++ b/7.scaling.md
@@ -135,7 +135,7 @@ while true; do wget -q -O- http://acg-lb.acg-ns.svc.cluster.local; done
 - To enable autoscaling `gcloud container clusters update my_cluster --enable-autoscaling --min-nodes=1 --max-nodes=10`.
 - Refer to GKE documentation for futher details.
 
-## Virtual Pod Autoscaler
+## Vertical Pod Autoscaler
 
 - Vertical Pod autoscaling provides recommendations for resource usage over time.
 - Use the HPA for sudden increases in resource usage.
