--- a/1.big_picture.md
+++ b/1.big_picture.md
@@ -60,7 +60,7 @@
   - Pods directly won't help much, so they are wrapped in a high level object called a deployment.
 - `Deployment:` It is an object on the cluster and it is defined under apps/v1 API group.
   - Deployment makes managing pods easier and flexible. For ex, scaling, rolling updates etc.
-- `Daemonsets:` This also wraps a pod like a deployment object, but this ensures at most one pod per worker node in the cluster.
+- `Daemonsets:` This also wraps a pod like deployment object, but this ensures at most one pod per worker node in the cluster.
 - `Stateful sets:` These are pods for specific parts of the application for stateful requirements. For ex, creating databases.
 - There are other API objects like secret, pv(persistent volume), pvc(persistent volume claim), svc(service) etc.
   - These are all resources that get deployed on to the cluster.
