--- a/3.services.md
+++ b/3.services.md
@@ -181,5 +181,5 @@ spec:
 
 - The above configuration creates a LoadBalancer Service and assigned it to the pods running with the label `hello-world` at port `8080`
 - As we know the pods already exists, but still it creates a new service before them.
-- Lets name the yaml `lb.yaml' and run the command `kubetcl apply -f .\lb.yaml`.
+- Lets name the yaml `lb.yaml` and run the command `kubetcl apply -f .\lb.yaml`.
 - This takes some time to get assign a load balancer. To watch this `kubectl get svc --watch`.
