--- a/4.storage.md
+++ b/4.storage.md
@@ -1,6 +1,6 @@
 ## Volumes
 
-- To basic primitive of volumes is to abstract storage from k8s pods.
+- The basic primitive of volumes is to abstract storage from k8s pods.
 - Without volumes data will be lost if a pod is removed from cluster.
 - Volumes exist on the cluster on their own, mostly provided by the cloud provider.
 - If a pod wants to use volume, it needs to create a claim(pvc) and mount it.
