--- a/4.storage.md
+++ b/4.storage.md
@@ -203,5 +203,5 @@ spec:
 - We have created storageClass and plugged that into elastic search backend.   
 - A request from PVC to claim for a storage on the backend creates storage in the backend and also creates a PV on the k8s cluster.
 
-#### Sometimes if a pvc declaration is found without sc, so pvc is using the underlying cloud's default storage class.
+#### Sometimes if a pvc declaration is found without sc, it means pvc is using the underlying cloud's default storage class.
 
