--- a/4.storage.md
+++ b/4.storage.md
@@ -15,7 +15,7 @@
 - K8S storage majorly consists of 3 objects.
   - Persistent Volume(PV)
     - It's a storage resource like a 20 GB SSD.
-  - Persistent Volume Claim(PV)
+  - Persistent Volume Claim(PVC)
     - It is like an applications unique identifier to use PV.
   - Storage Class(SC)
     - To implement PV and PVCs dynamically.
