--- a/4.storage.md
+++ b/4.storage.md
@@ -109,7 +109,7 @@ spec:
 
 ## Mounting a Volume
 
-- To mount a volume on to a Pod tow attributes persistentVolumeClaim and volumeMounts should be defined.
+- To mount a volume on to a Pod two attributes persistentVolumeClaim and volumeMounts should be defined.
 - The sample yaml configuration can be seen below.
 
 ```yaml
